--- a/sources/src/docs/topics/gettingstarted.adoc
+++ b/sources/src/docs/topics/gettingstarted.adoc
@@ -480,9 +480,9 @@ brew install subversion
 . Open command prompt and check that svn is added to the path with `svn --version`
 
 
-include::configuringmaven.adoc[]
+// include::configuringmaven.adoc[]
 
-include::sebipom.adoc[]
+include::testeasypom.adoc[]
 
 == Additional Pointers
 
