--- a/sources/src/docs/topics/generics1.adoc
+++ b/sources/src/docs/topics/generics1.adoc
@@ -172,7 +172,7 @@ is the correct choice.
 image::acceptablesupers.svg[]
 
 .Quiz: Can you name the super types of circle in the class diagram above?
-[%collapsible,role="blue"]
+[%collapsible,role="quiz"]
 ====
 Shape, Object, Serializable, ArcLike, Surface, and Circle itself.
 ====
