--- a/sources/src/docs/topics/gettingstarted.adoc
+++ b/sources/src/docs/topics/gettingstarted.adoc
@@ -44,9 +44,9 @@ Do [red]*NOT* use `Program Files` under Windows, because of the space in the nam
 ====
 
 Installation of Java can be done either through a package manager or by downloading the
-the Java distribution from  https://adoptopenjdk.net/[AdoptOpenJDK ^].
-For PRC2 we will use [blue]*Java 11* as a minimum, but you may want to pick up
-Java 8 for older projects and maybe Java 15 (or even Java 16 when it becomes available) too.
+the Java distribution from  https://adoptium.net/[Adoptium ^].
+For PRC2 we will use [blue]*Java 17* as a minimum, but you may want to pick up
+Java 11 for older projects and maybe Java 18 too.
 
 ==== icon:linux[fw] Linux
 
@@ -57,29 +57,30 @@ We assume that that if you are running a different distribution of Linux that yo
 instructions to apply to that distribution (e.g. use the correct package manager Zypper, PacMan, etc.).
 ====
 
-With a package manager:
-
-.icon:linux[fw] install via apt-get
-[source,sh]
-----
-wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
-sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/
-sudo apt update
-sudo apt install adoptopenjdk-11-hotspot
-----
+// With a package manager:
+//
+// .icon:linux[fw] install via apt-get
+// [source,sh]
+// ----
+// wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
+// sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb/
+// sudo apt update
+// sudo apt install adoptopenjdk-11-hotspot
+// ----
+//
 
 Manual installation:
 
 In the example below we assume that the distribution is packed as a `tar.gz` archive.
-The example shows the archive name as of 10 February 2021,
-OpenJDK11U-jdk_x64_linux_hotspot_11.0.10_9.tar.gz
+The example shows the archive name as of 21 November 2021,
+OpenJDK17U-jdk_x64_linux_hotspot_17.0.1_12.tar.gz
 
 .icon:linux[fw] unpack java distribution using the command-line
 [source,sh]
 ----
 sudo mkdir -p /usr/lib/jvm
 cd /usr/lib/jvm
-sudo tar xf ~/Downloads/OpenJDK11U-jdk_x64_linux_hotspot_11.0.10_9.tar.gz
+sudo tar xf ~/Downloads/OpenJDK17U-jdk_x64_linux_hotspot_17.0.1_12.tar.gz
 ----
 
 ==== icon:apple[fw] macOS
@@ -96,7 +97,7 @@ brew install --cask adoptopenjdk11
 Manual installation:
 
 Download the correct distribution/version of choice from
-https://adoptopenjdk.net/[AdoptOpenJDK ^].
+https://adoptium.net/[Adoptium ^].
 Install the same way as normal programs.
 
 ==== icon:windows[fw] Windows
@@ -112,7 +113,7 @@ choco install adoptopenjdk11 --params="/ADDLOCAL=FeatureMain,FeatureEnvironment,
 Manual installation:
 
 Download the correct distribution/version of choice from
-https://adoptopenjdk.net/[AdoptOpenJDK ^].
+https://adoptium.net/[Adoptium ^].
 Install the same way as normal programs,
 
 [WARNING]
@@ -139,11 +140,10 @@ Since we want the best Java experience, we will use some common environment vari
 .icon:linux[fw] Define JAVA_HOME
 [source,sh]
 ----
-export JAVA_HOME=/usr/lib/jvm/jdk-11.0.10+9 #<1>
-export JAVA_HOME=/usr/lib/jvm/adoptopenjdk-11-hotspot-amd64 #<2>
+export JAVA_HOME=/usr/lib/jvm/jdk-17.0.1+12/ #<1>
 ----
 <1> Path for manual installation
-<2> Path for package manager installation
+// <2> Path for package manager installation
 
 *PATH* Prepend the directory under JAVA_HOME to your path, so all java related programs, such as `java` , `javac`, `jar` etc can be found, by just typing the name.
 
@@ -190,11 +190,11 @@ Where the <path_to_java_home> can be obtained by:
 .icon:apple[fw] Obtaining the path to Java home
 [source,sh]
 ----
-/usr/libexec/java_home -v '15*' #<1>
-/usr/libexec/java_home -v '15.0.2'#<2>
+/usr/libexec/java_home -v '17*' #<1>
+/usr/libexec/java_home -v '17.0.2'#<2>
 ----
-<1> Retrieve the path to Java 15 if installed
-<2> Retrieve the path to a specific subversion of Java 15
+<1> Retrieve the path to Java 17 if installed
+<2> Retrieve the path to a specific subversion of Java 17
 
 .icon:apple[fw] Check that `JAVA_HOME` is set correctly
 [source,sh]
@@ -207,7 +207,7 @@ However instead of hardcoding the path it is better to retrieve the path while s
 .icon:apple[fw] Set `JAVA_HOME` dynamically with the following command (e.g. for Java 15):
 [source,sh]
 ----
-export JAVA_HOME=$(/usr/libexec/java_home -v '15*') #<1>
+export JAVA_HOME=$(/usr/libexec/java_home -v '17*') #<1>
 ----
 <1> $() means that the invocation between parenthesis is resolved first.
 
@@ -225,13 +225,13 @@ This means we can specify our aliases in either `.zshrc` or in `.zprofile` in ou
 .icon:apple[fw] Add the following lines to ~/.zshrc:
 [source,sh]
 ----
-export JAVA_HOME=$(/usr/libexec/java_home -v 11) #<1>
+export JAVA_HOME=$(/usr/libexec/java_home -v 17) #<1>
 alias j11="export JAVA_HOME=`/usr/libexec/java_home -v 11`; java -version" #<2>
-alias j15="export JAVA_HOME=`/usr/libexec/java_home -v 15`; java -version" #<3>
+alias j17="export JAVA_HOME=`/usr/libexec/java_home -v 17`; java -version" #<3>
 ----
-<1> Set the default version of Java to version 11.
+<1> Set the default version of Java to version 17.
 <2> Alias to set the Java environment to version 11.
-<3> Alias to set the Java environment to version 15.
+<3> Alias to set the Java environment to version 17.
 
 We now need to either restart the terminal for the aliases to take effect or source the `.zshrc` file.
 
@@ -282,15 +282,15 @@ Install manually:
 
 Fetch a fresh copy of https://maven.apache.org/[Apache Maven] from the website.
 
-To install it, do (example uses version 3.6.3  as of 2019-11-03)
+To install it, do (example uses version 3.8.4  as of 2021-11-21)
 
 .icon:linux[fw] install apache maven and add to path
 [source,sh]
 ----
 cd /usr/share
 sudo rm -fr maven
-sudo tar xf ~/Downloads/apache-maven-3.6.3-bin.tar.gz
-sudo ln -sf apache-maven-3.6.3/ maven
+sudo tar xf ~/Downloads/apache-maven-3.8.4-bin.tar.gz
+sudo ln -sf apache-maven-3.8.4/ maven
 cd /usr/bin
 sudo ln -sf ../share/maven/bin/mvn .
 ----
@@ -302,11 +302,11 @@ Once this is done, entering  `mvn --version` should produce output similar to
 ----
 hom@threehundred: /usr/share
 🐧$ mvn --version
-Apache Maven 3.6.3 (cecedd343002696d0abb50b32b541b8a6ba2883f)
+Apache Maven 3.8.4 (9b656c72d54e5bacbed989b64718c159fe39b537)
 Maven home: /usr/share/maven
-Java version: 11.0.5, vendor: AdoptOpenJDK, runtime: /usr/lib/jvm/jdk-11.0.5+10
-Default locale: en_GB, platform encoding: UTF-8
-OS name: "linux", version: "5.0.0-36-generic", arch: "amd64", family: "unix"
+Java version: 17.0.1, vendor: Eclipse Adoptium, runtime: /usr/lib/jvm/jdk-17.0.1+12
+Default locale: en_US, platform encoding: UTF-8
+OS name: "linux", version: "5.13.0-21-generic", arch: "amd64", family: "unix"
 ----
 
 ==== icon:apple[fw] macOS
@@ -364,8 +364,8 @@ in the traditional (as in same directories as the installer would) `/usr/local`.
 [source,sh]
 ----
 cd /usr/local
-sudo unzip ~/Downloads/netbeans-12.2-bin.zip
-sudo mv netbeans{,-12.2}
+sudo unzip ~/Downloads/netbeans-12.5-bin.zip
+sudo mv netbeans{,-12.5}
 ----
 
 For extra creature comfort, add a simple netbeans script to your path
@@ -374,7 +374,7 @@ For extra creature comfort, add a simple netbeans script to your path
 [source,sh]
 ----
 #!/bin/bash
-/usr/local/netbeans-12.2/bin/netbeans "$@" & #<1>
+/usr/local/netbeans-12.5/bin/netbeans "$@" & #<1>
 ----
 
 <1> Invoke netbeans using its absolute path.
