--- a/sources/src/docs/topics/jdbc1.adoc
+++ b/sources/src/docs/topics/jdbc1.adoc
@@ -113,10 +113,12 @@ public class DataSourceDemo {
     }
 
     void demo() throws SQLException {  //<3>
-        String query
-                = "select state.name as state,p.name as president,state.year_entered \n"
-                  + " from president p join state state on(p.state_id_born=state.id)\n"
-                  + "where state.name like 'N%'";
+        String query // <4>
+                = """
+                  select state.name as state,p.name as president,state.year_entered
+                  from president p join state state on(p.state_id_born=state.id)
+                  where state.name like 'N%'
+                  """;
             doQuery( query, System.out );
     }
 }
@@ -126,7 +128,7 @@ public class DataSourceDemo {
 <2> Constructor receives the DataSource.
 <3> The method uses the DataSource to get a connection in the try-with-resources block +
   and passes it on to the method that executes the query and deals with the result by printing it.
-
+<4> text blocks, since java 14, combine nicely with sql queries.
 
 The `doQuery(...)` method uses the supplied connection to create a statement which is then executed to produce a ResultSet.
 You will see some similarities in what you have seen in project 1, using php PDO.
